--- a/index.html
+++ b/index.html
@@ -15,11 +15,14 @@
 
 <body>
     <div class="container ">
-        <div class="row one fullwidth">
-            <div class="12-large columns  bg-img">
 
 
-                  <header>
+
+         <div class="row one fullwidth   bg-img ">
+             <div class="12-large columns
+                         ">
+             <div class="overlay">
+                                  <header>
       <a href="#home" class="logo" data-scroll>BM</a>
       <nav class="nav-collapse">
         <ul>
@@ -31,27 +34,18 @@
       </nav>
     </header>
 
-                <!--                The navigation bar -->
-<!--
-                <ul class="menu">
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#">About</a></li>
-                    <li><a href="#">Portfolio</a></li>
-                    <li><a href="#">Blog</a></li>
-                    <li><a href="#">Contact</a></li>
+
+                 </div>
+</div>
+
+             </div>
 
 
-                </ul>
-                                End nav
-                <div class="mouse">
-                    <span></span>
-                </div>
--->
-            </div>
-        </div>
+
         <!--    This second row covers about me-->
         <div class="row two fullwidth">
-            <div class="large-4 columns about overlay">
+            <div class="large-4 columns about
+                        ">
                 <div id="box">
                     <h1>About<br><span>Me</span></h1></div>
             </div>
