--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
              <div class="12-large columns
                          ">
              <div class="overlay">
-                                  <header>
+                                  <header class="nav-bar">
       <a href="#home" class="logo" data-scroll><img src="img/Drawing%20(1).png" height= "8%" width="8%;"></a>
       <nav class="nav-collapse">
         <ul>
@@ -43,12 +43,14 @@
 </div>
 <!--    This second row covers about me-->
         <div class="row two fullwidth">
+<!--
             <div class="large-4 columns about
                         ">
                 <div id="box">
                     <h1>About<br><span>Me</span></h1></div>
             </div>
-            <div class="large-8 columns cont">
+-->
+            <div class="large-12 columns cont">
 
                 <div class="item">
                     <h3>designer 
@@ -107,15 +109,8 @@
             });
         })(window);
     </script>
-   <script>
 
 
-  $(document).on('scroll', function (e) {
-    $('.nav-bar').css('opacity', ($(document).scrollTop() / 500));
-});
-
-
-    </script>
      <script src="js/fastclick.js"></script>
     <script src="js/scroll.js"></script>
     <script src="js/fixed-responsive-nav.js"></script>
