About me section with paragraph and headers

--- a/index.html
+++ b/index.html
@@ -53,8 +53,10 @@
             <div class="large-12 columns cont">
 
                 <div class="item">
+                    <h1> <hr> &lt;About Me&gt;<hr></h1>
                     <h3>designer 
-                         and coder</h3>
+                        and &lt;coder&gt;
+                        </h3>
                     <p class="me">A web and graphics developer who is pasionate about making cool, unique and functional websites. I am technicaly proficient and easy to work with. When am not coding, i try out new recipes and and engage in outdoor activities</p>
                 </div>
 
