--- a/index.html
+++ b/index.html
@@ -162,22 +162,69 @@ skillset -->
 
                     </div>
                 </div>
+                <div class="row fullwidth gallery-web">
+
+                    <div class=" small-11 small-centered gallery-port">
+                        <div class="case-study study1">
+                            <figure>
+                                <img class="case-study__img" src="http://static.squarespace.com/static/51b79838e4b0b8b55c75cf91/t/51c4b688e4b03003ea9f1a63/1371846281755/Hexxis+Logo+White.png" alt="" />
+                            </figure>
+                            <div class="case-study__overlay">
+                                <h2 class="case-study__title">Developing Hexxis</h2>
+                                <a class="case-study__link" href="#">View Case Study</a>
+                            </div>
+                        </div>
+
+                        <div class="case-study study2">
+                            <figure>
+                                <img class="case-study__img" src="http://static.squarespace.com/static/51b79838e4b0b8b55c75cf91/t/51c4b688e4b03003ea9f1a63/1371846281755/Hexxis+Logo+White.png" alt="" />
+                            </figure>
+                            <div class="case-study__overlay">
+                                <h2 class="case-study__title">Developing Hexxis</h2>
+                                <a class="case-study__link" href="#">View Case Study</a>
+                            </div>
+                        </div>
+
+                        <div class="case-study study3">
+                            <figure>
+                                <img class="case-study__img" src="http://static.squarespace.com/static/51b79838e4b0b8b55c75cf91/t/51c4b688e4b03003ea9f1a63/1371846281755/Hexxis+Logo+White.png" alt="" />
+                            </figure>
+                            <div class="case-study__overlay">
+                                <h2 class="case-study__title">Developing Hexxis</h2>
+                                <a class="case-study__link" href="#">View Case Study</a>
+                            </div>
+                        </div>
+
+                        <div class="case-study study4">
+                            <figure>
+                                <img class="case-study__img" src="http://static.squarespace.com/static/51b79838e4b0b8b55c75cf91/t/51c4b688e4b03003ea9f1a63/1371846281755/Hexxis+Logo+White.png" alt="" />
+                            </figure>
+                            <div class="case-study__overlay">
+                                <h2 class="case-study__title">Developing Hexxis</h2>
+                                <a class="case-study__link" href="#">View Case Study</a>
+                            </div>
+                        </div>
+
+                    </div>
+                </div>
 
             </div>
 
-
-            <script src="js/classie.js"></script>
-            <script src="js/clipboard.min.js"></script>
-            <script src="js/fastclick.js"></script>
-            <script src="js/scroll.js"></script>
-            <script src="js/fixed-responsive-nav.js"></script>
+    </div>
 
 
-            </script>
-            <script src="js/vendor/jquery.js"></script>
-            <script src="js/vendor/what-input.js"></script>
-            <script src="js/vendor/foundation.js"></script>
-            <script src="js/app.js"></script>
-        </body>
+    <script src="js/classie.js"></script>
+    <script src="js/clipboard.min.js"></script>
+    <script src="js/fastclick.js"></script>
+    <script src="js/scroll.js"></script>
+    <script src="js/fixed-responsive-nav.js"></script>
+
+
+    </script>
+    <script src="js/vendor/jquery.js"></script>
+    <script src="js/vendor/what-input.js"></script>
+    <script src="js/vendor/foundation.js"></script>
+    <script src="js/app.js"></script>
+    </body>
 
 </html>
