--- a/index.html
+++ b/index.html
@@ -205,23 +205,46 @@ skillset -->
                     </div>
                 </div>
 
+                <!-- CONTACT ME START HERE -->
+                <div class="row fullwidth contact fullwidth">
+                    <div class="large-12 medium-12 columns cont">
+                        <!--======= TITTLE PART =========-->
+
+
+                        <h3>Get ın touch</h3>
+                        <hr>
+                        <p>Feel free to contact or follow me on:</p>
+
+                        <!--======= SOCIAL ICONS PART =========-->
+                        <!--
+                        <div class="social_icons">
+                            <ul>
+                                <li class="facebook"> <a href="#." data-scroll-reveal="wait 0.25s, then enter top and move 40px over 1s"><i class="fa fa-facebook"></i> </a> </li>
+                                <li class="twitter"> <a href="#." data-scroll-reveal="wait 0.25s, then enter top and move 40px over 1s"><i class="fa fa-twitter"></i> </a> </li>
+                                <li class="dribbble"> <a href="#." data-scroll-reveal="wait 0.25s, then enter top and move 40px over 1s"><i class="fa fa-dribbble"></i> </a> </li>
+                                <li class="googleplus"> <a href="#." data-scroll-reveal="wait 0.25s, then enter top and move 40px over 1s"><i class="fa fa-google"></i> </a> </li>
+                                <li class="linkedin "> <a href="#." data-scroll-reveal="wait 0.25s, then enter top and move 40px over 1s"><i class="fa fa-linkedin"></i> </a> </li>
+                                <li class="pinterest"> <a href="#." data-scroll-reveal="wait 0.25s, then enter top and move 40px over 1s"><i class="fa fa-pinterest"></i> </a> </li>
+                            </ul>
+                        </div>
+-->
+
+                    </div>
+                </div>
             </div>
 
-    </div>
+            <script src="js/classie.js"></script>
+            <script src="js/clipboard.min.js"></script>
+            <script src="js/fastclick.js"></script>
+            <script src="js/scroll.js"></script>
+            <script src="js/fixed-responsive-nav.js"></script>
 
 
-    <script src="js/classie.js"></script>
-    <script src="js/clipboard.min.js"></script>
-    <script src="js/fastclick.js"></script>
-    <script src="js/scroll.js"></script>
-    <script src="js/fixed-responsive-nav.js"></script>
-
-
-    </script>
-    <script src="js/vendor/jquery.js"></script>
-    <script src="js/vendor/what-input.js"></script>
-    <script src="js/vendor/foundation.js"></script>
-    <script src="js/app.js"></script>
-    </body>
+            </script>
+            <script src="js/vendor/jquery.js"></script>
+            <script src="js/vendor/what-input.js"></script>
+            <script src="js/vendor/foundation.js"></script>
+            <script src="js/app.js"></script>
+        </body>
 
 </html>
