--- a/index.html
+++ b/index.html
@@ -169,8 +169,8 @@ skillset -->
 
 
                             <div class="case-study__overlay">
-                                <h2 class="case-study__title">Sage Website</h2>
-                                <a class="case-study__link" href="#">View Page</a>
+                                <h2 class="case-study__title">Personal Blog</h2>
+                                <a class="case-study__link" href="http://blossomciku.pythonanywhere.com/">View Page</a>
                             </div>
                         </div>
 
@@ -178,45 +178,44 @@ skillset -->
 
 
                             <div class="case-study__overlay">
-                                <h2 class="case-study__title">Queens Hotel</h2>
-                                <a class="case-study__link" href="#">View Page</a>
+                                <h2 class="case-study__title">254-Kiddies Couture</h2>
+                                <a class="case-study__link" href="https://bethmwangi.github.io/254_kiddies/">View Page</a>
                             </div>
                         </div>
 
                         <div class="case-study study3">
-
-
-                            -->
                             <div class="case-study__overlay">
-                                <h2 class="case-study__title">254-Kiddies Couture</h2>
-                                <a class="case-study__link" href="#">View Page</a>
+                                <h2 class="case-study__title">Watoto Kumi Website </h2>
+                                <a class="case-study__link" href="https://bethmwangi.github.io/watotokumi/">View Page</a>
                             </div>
                         </div>
 
                         <div class="case-study study4">
-
-
                             <div class="case-study__overlay">
-                                <h2 class="case-study__title">Burger Dome Cafe</h2>
-                                <a class="case-study__link" href="#">View Page</a>
+                                   <h2 class="case-study__title">By-hand Design</h2>
+
+                           <a class="case-study__link" href="https://bethmwangi.github.io/by-hand-design/">View Page</a>
                             </div>
                         </div>
 
                     </div>
                 </div>
 
-                <!-- CONTACT ME START HERE -->
-                <div class="row fullwidth contact fullwidth">
-                    <div class="large-12 medium-12 columns cont">
+
+                <!--SHYM CONTACT START HERE -->
+                <footer class="shym-contact">
+
+                    <div class="cont">
+
                         <!--======= TITTLE PART =========-->
-
-
-                        <h3>Get ın touch</h3>
-                        <hr>
-                        <p>Feel free to contact or follow me on:</p>
+                        <div class="tittle">
+                            <h3 class='shym-text-center'>Get ın touch</h3>
+                            <hr>
+                            <p class='shym-text-center'>Contact me on</p>
+                        </div>
 
                         <!--======= SOCIAL ICONS PART =========-->
-                        <!--
+<!--
                         <div class="social_icons">
                             <ul>
                                 <li class="facebook"> <a href="#." data-scroll-reveal="wait 0.25s, then enter top and move 40px over 1s"><i class="fa fa-facebook"></i> </a> </li>
@@ -229,22 +228,83 @@ skillset -->
                         </div>
 -->
 
+                        <!--======= CONTACT INFO PART =========-->
+                        <div class="con-info">
+                            <div class="row">
+                                <div class='container'>
+                                    <div class="medium-6 small-6 columns">
+                                        <div class="row">
+                                           <!--  <div class="small-6 columns"> <i class="ion-flag"></i>
+                                                <h4>ABOUT </h4>
+                                                <p> Temporibus autem quisbusdam et aut officiis debitis aut rerum nece sitatibus sape eveniet ut et voluptate rerum. </p>
+                                            </div> -->
+
+                                            <!--======= OFFICE ADRESS PART =========-->
+                                            <div class="col-sm-6"> <i class="ion-android-location"></i>
+                                                <h4>ADDRESS</h4>
+                                                <p> P.O Box 59795-00200</p>
+                                                <p> wanjikumnwangib@gmail.com </p>
+                                            </div>
+                                        </div>
+                                    </div>
+
+                                    <!--======= GET IN TOUCH PART =========-->
+                                    <div class="medium-6 small-6 columns"> <i class="ion-flag"></i>
+                                        <h4>GET IN TOUCH</h4>
+                                        <div id="contact_form">
+                                            <form id="contact-form" class="contact-form " accept-charset="utf-8" method="post">
+                                                <div class="row">
+                                                    <div class="small-6 columns">
+                                                        <div class="form-group">
+                                                            <label><span>Name</span>
+                                                                <input name="name" type="text" placeholder="Name" />
+                                                            </label>
+                                                        </div>
+                                                    </div>
+                                                    <div class="small-6 columns">
+                                                        <div class="form-group">
+                                                            <label>
+                                                                <input name="email" type="email" placeholder="Email" />
+                                                            </label>
+                                                        </div>
+                                                    </div>
+                                                    <div class="medium-12 columns">
+                                                        <label> <span>Message</span>
+                                                            <textarea name="message" placeholder="Your Message"></textarea>
+                                                        </label>
+                                                        <input name="submit" type="submit" value="SUBMIT YOUR MESSAGE" />
+                                                    </div>
+                                                </div>
+                                            </form>
+                                            <div class="clearfix"></div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
                     </div>
-                </div>
             </div>
 
-            <script src="js/classie.js"></script>
-            <script src="js/clipboard.min.js"></script>
-            <script src="js/fastclick.js"></script>
-            <script src="js/scroll.js"></script>
-            <script src="js/fixed-responsive-nav.js"></script>
 
 
-            </script>
-            <script src="js/vendor/jquery.js"></script>
-            <script src="js/vendor/what-input.js"></script>
-            <script src="js/vendor/foundation.js"></script>
-            <script src="js/app.js"></script>
-        </body>
+            </footer>
+
+
+
+    </div>
+
+    <script src="js/classie.js"></script>
+    <script src="js/clipboard.min.js"></script>
+    <script src="js/fastclick.js"></script>
+    <script src="js/scroll.js"></script>
+    <script src="js/fixed-responsive-nav.js"></script>
+
+
+    </script>
+    <script src="js/vendor/jquery.js"></script>
+    <script src="js/vendor/what-input.js"></script>
+    <script src="js/vendor/foundation.js"></script>
+    <script src="js/app.js"></script>
+    </body>
 
 </html>
