--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 
 
 
-                        <div class="tagCloud"><span><h1>01</h1>
+                        <div class="tagCloud" id="about"><span><h1>01</h1>
                    
                     <h2> &lt;About Me&gt;</h2></span></div>
 
@@ -156,7 +156,7 @@ skillset -->
                 <div class="row four fullwidth">
 
                     <div class="large-12 columns portfolio">
-                        <div class="tagCloud"><span><h1>03</h1>
+                        <div class="tagCloud" id="projects"><span><h1>03</h1>
                    
                     <h2> &lt;My Works&gt;</h2></span></div>
 
@@ -249,7 +249,7 @@ skillset -->
                                     </div>
 
                                     <!--======= GET IN TOUCH PART =========-->
-                                    <div class="medium-6 small-6 columns"> <i class="ion-flag"></i>
+                                    <div class="medium-6 small-6 columns"id="contact"> <i class="ion-flag"></i>
                                         <h4>GET IN TOUCH</h4>
                                         <div id="contact_form">
                                             <form id="contact-form" class="contact-form " accept-charset="utf-8" method="post">
