--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                             <li class="menu-item active"><a href="#home" data-scroll>Home</a></li>
                             <li class="menu-item"><a href="#about" data-scroll>About</a></li>
                             <li class="menu-item"><a href="#projects" data-scroll>Portfolio</a></li>
-                            <li class="menu-item"><a href="#blog" data-scroll>Blog</a></li>
+                            <li class="menu-item"><a href="http://blossomciku.pythonanywhere.com/" data-scroll>Blog</a></li>
                             <li class="menu-item"><a href="#contact" data-scroll>Contact</a></li>
                         </ul>
                     </nav>
