--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
                                 </div>
                                 <div class=" small-12 medium-9 large-10 columns">
                                     <h1>Back-End Development</h1>
-                                    <p>A strong eye for visual design, layout, typography and color are essential to a designer.The first thing I do is create mock-ups, frameworks and finally design decisions that I can use before starting any project </p>
+                                    <p>The server and the database are essential to any application build. The user interacts with the front end and the database stores the info. </p>
                                 </div>
                             </section>
                             <section class="row">
